Solution-Files/Task5/k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/docker-carrental-net: "true"
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: carrental
            - name: POSTGRES_PASSWORD
              value: password
            - name: POSTGRES_USER
              value: techprodb_user
          image: 621627302500.dkr.ecr.us-east-1.amazonaws.com/ziyaasici/blue-rental-car:postgresqlv1
          name: postgres
          ports:
            - containerPort: 5432
              hostPort: 5432
              protocol: TCP
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
